mockers_derive/tests/compile-fail/assoc_type_bound.rs
use mockers_derive::mocked;

#[mocked]
trait A {
    type Item : Sized;
}

fn main() {}
